exports[`test renders complete message 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h4
              className="text-dark-secondary soft-half-top">
              1111
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
            <h6
              className="text-brand">
              Schedule Completed
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders loading if no entries 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h4
              className="text-dark-secondary soft-half-top">
              1111
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
            <h6
              className="text-alert"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }>
              Stop Contribution
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="one-whole soft text-center">
        <Spinner />
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders loading if no schedule 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center soft">
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              } />
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders loading if not ready 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center soft">
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              } />
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders no contributions message 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h4
              className="text-dark-secondary soft-half-top">
              1111
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
            <h6
              className="text-alert"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }>
              Stop Contribution
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div
        className="text-left soft-double-top soft-half-sides">
        <p>
          We didn\'t find any contributions associated with this schedule.
        </p>
        <p>
          <em>
            If you have any questions, please call our Finance Team at 864-965-9990 or 
            <a
              href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
              rel="noopener noreferrer"
              target="_blank">
              contact us 
            </a>
             and someone will be happy to assist you.
          </em>
        </p>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders stopped message 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h4
              className="text-dark-secondary soft-half-top">
              1111
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
            <h6
              className="text-brand">
              Contribution Stopped
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h4
              className="text-dark-secondary soft-half-top">
              1111
               
              <AccountType
                height="20px"
                type="Bank"
                width="30px" />
            </h4>
            <h6
              className="text-alert"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }>
              Stop Contribution
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders without schedule 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center soft">
            <Spinner
              styles={
                Object {
                  "height": "40px",
                  "width": "40px",
                }
              } />
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test renders without schedule payment 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h6
              className="text-alert"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }>
              Stop Contribution
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;

exports[`test works with credit card 1`] = `
<div>
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Meta
      title="Giving Schedule" />
    <Right
      background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/heroes/newspring/campuses/Florence.1.2x1_1700_850_90_c1.jpg"
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary">
      <div
        className="text-left soft-double-top hard-left@lap-and-up soft-half-bottom soft@anchored">
        <div
          className="soft-double-ends@anchored">
          <div
            className="text-center">
            <p
              className="push-half-bottom">
              <em>
                Started on 
                Dec 11, 2012
              </em>
            </p>
            <h4
              className="text-dark-secondary flush-bottom">
              Test
            </h4>
            <h3
              className="text-primary">
              test account
            </h3>
            <h1
              className="text-dark-primary flush-bottom soft-half-bottom">
              $2
            </h1>
            <h4
              className="text-dark-secondary soft-half-top">
              1111
               
              <AccountType
                height="20px"
                type="Visa"
                width="30px" />
            </h4>
            <h6
              className="text-alert"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                }
              }>
              Stop Contribution
            </h6>
            <p
              className="text-center soft-ends soft-double@anchored flush-bottom soft-ends soft-sides@portable">
              Thank you so much for your contributions! It is because of your generosity that we are able to continue telling stories of the greatness of Jesus and seeing lives changed.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="soft-half soft-sides@portable soft-double-sides@anchored">
      <div>
        <h4
          className="soft soft-double-ends text-center flush-bottom">
          Contributions from this Schedule
        </h4>
        <div>
          <div>
            <div
              className="soft text-left">
              <h5>
                2013
              </h5>
            </div>
            <TransactionCard
              person={Object {}}
              transaction={
                Object {
                  "date": "2013-12-12",
                  "details": Array [
                    Object {
                      "account": "test detail account",
                      "amount": 2,
                    },
                  ],
                  "person": Object {},
                }
              }
              transactionDetail={
                Object {
                  "account": "test detail account",
                  "amount": 2,
                }
              } />
          </div>
        </div>
        <div>
          <TransactionCard
            person={Object {}}
            transaction={
              Object {
                "date": "2013-12-12",
                "details": Array [
                  Object {
                    "account": "test detail account",
                    "amount": 2,
                  },
                ],
                "person": Object {},
              }
            }
            transactionDetail={
              Object {
                "account": "test detail account",
                "amount": 2,
              }
            } />
        </div>
      </div>
      <hr
        className="push-double-top flush-bottom" />
      <h4
        className="soft soft-double-ends text-center@lap-and-up flush-bottom">
        Recent Articles About Giving
      </h4>
      <div
        className="grid">
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
        <div
          className="grid__item one-whole push-half-bottom push-bottom@portable hard-bottom">
          <Card
            classes={
              Array [
                "push-bottom@lap-and-up",
              ]
            }
            defaultImage="http://test.com/test.jpg"
            images={
              Array [
                Object {
                  "url": "http://test.com/test.jpg",
                },
              ]
            }>
            <h4
              className="push-half-top@portable push-top@anchored">
              test
            </h4>
            <p>
              <small
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test summary",
                  }
                } />
            </p>
          </Card>
        </div>
      </div>
    </div>
  </Left>
</div>
`;
